--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>localstorage.page</title>
+  <meta name="description" content="A notepad persisted to localstorage">
   <script src="./app.js"></script>
   <link rel="stylesheet" href="./styles.css" />
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
@@ -12,7 +13,7 @@
 </head>
 <body>
   <div class="wrapper">
-    <textarea autofocus></textarea>
+    <textarea aria-label="Note" autofocus></textarea>
     <span class="status"></span>
   </div>
 </body>
